--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=HelloWorld
+# temporary data storage
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# enabling H2 console
+spring.h2.console.enabled=true
+# custom H2 console URL
+spring.h2.console.path=/console
